fix(comment): fixing comment docs
